Layout bug fixes
also. removed slow grunt usemin for images in js

--- a/client/app/game/game.less
+++ b/client/app/game/game.less
@@ -82,7 +82,7 @@
 .schedule{
   position: absolute;
   left: 78px;
-  z-index: 150;
+  z-index: 10;
   .schedule-item{
       width: 162px;
       background: @peach;
@@ -102,8 +102,8 @@
 }
 
 .itinerary-container{
-  position: absolute;
-  z-index: 100;
+  // position: absolute;
+  z-index: 20;
 }
 
 .text{
